--- a/app/views/templates/my_songs.html
+++ b/app/views/templates/my_songs.html
@@ -7,7 +7,7 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <style>
         body {
-            background-color: #ffffff; /* Only for this page */
+            background-color: #ffffff; 
             color: #121212;
         }
     </style>
