--- a/app/views/static/homeStyles.css
+++ b/app/views/static/homeStyles.css
@@ -1,22 +1,25 @@
-/* Add a dark background to the body */
 body {
-    background-color: #121212; /* Dark background for the body */
-    color: #ffffff; /* Light text for better readability in dark mode */
+    background-color: #121212; 
+    color: #ffffff; 
 }
 
-/* Search Bar Styling */
+#search-results th {
+    padding-left: 60px; 
+    padding-right: 65px; 
+    text-align: left;
+}
+
 .search-bar {
     width: 100%;
     padding: 10px;
-    margin-bottom: 20px; /* space between search bar and the table */
+    margin-bottom: 20px; 
     box-sizing: border-box;
     border: 2px solid #ccc;
     border-radius: 4px;
-    background-color: #333333; /* Dark background for the search bar */
-    color: #ffffff; /* Light color text */
+    background-color: #333333; 
+    color: #ffffff;
 }
 
-/* Table Styling */
 #search-results th {
     background-color: #333333;
     color: #ffffff;
@@ -24,18 +27,15 @@ body {
 
 
 #search-results th, #search-results td {
-    padding: 15px; /* more padding for a better look */
+    padding: 15px; 
     text-align: left;
-    border-bottom: 1px solid #ddd; /* changed to only bottom for a cleaner look */
+    border-bottom: 1px solid #ddd;
 }
 
-
-/* Hover effect for table rows */
 #search-results tr:hover {
     background-color: #454545;
 }
 
-/* Additional Styles to make the table prettier */
 .results-container {
-    padding: 0 20px; /* padding around the table */
+    padding: 0 20px;
 }
