--- a/app/views/templates/login.html
+++ b/app/views/templates/login.html
@@ -6,75 +6,9 @@
     <link rel="icon" href="{{ url_for('static', filename='img/logo.png') }}">
     <title>Login - Your Music App</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-    <style>
-        body, html {
-            height: 100%;
-            margin: 0;
-        }
-        .login {
-            background: #0a0a0a;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-        }
-        .card {
-            box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-            transition: 0.3s;
-            background-color: #222; /* Card background, slightly lighter than black for contrast */
-            color: #fff; /* Text color for readability on dark background */
-        }
-
-        .card:hover {
-            box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
-        }
-        .logo-container {
-            text-align: center;
-            margin-bottom: 20px;
-        }
-        .logo {
-            width: 150px; /* or any size you want */
-            height: auto;
-        }
-        .form-container {
-            padding: 2rem;
-        }
-        .btn-primary {
-            background-color: #4CAF50; /* Custom Primary Color */
-            border: none;
-            padding: 10px 20px;
-        }
-        .btn-link {
-            color: #4CAF50; /* Custom Link Color */
-        }
-        .flashes {
-            list-style-type: none;
-            padding: 0;
-        }
-        .flashes li {
-            margin-bottom: 10px;
-        }
-
-        /* Styles for flash messages */
-        .flash-messages-container {
-            position: fixed; /* Fixed position */
-            top: 70%; /* Adjust as per your preference */
-            left: 30%; /* Center horizontally */
-            transform: translateX(-50%); /* Centering adjustment */
-            z-index: 1000; /* High z-index to float above other elements */
-            width: 100%; /* Full width */
-            text-align: center; /* Center the text */
-            pointer-events: none; /* Allows clicks to pass through */
-        }
-
-        .flashes .alert {
-            display: inline-block; /* Display alerts inline */
-            pointer-events: auto; /* Enable interactions with the alert */
-        }
-    </style>
+    <link rel="stylesheet" href="{{ url_for('static', filename='loginStyles.css') }}">
 </head>
 <body class="login">
-    <!-- Flash messages container -->
     <div class="flash-messages-container">
         {% with messages = get_flashed_messages(with_categories=true) %}
             {% if messages %}
@@ -93,7 +27,6 @@
         </div>
         <div class="card">
             <div class="card-body">
-                <!-- Login Form -->
                 <form method="post">
                     {{ form.hidden_tag() }}
                     <h3 class="card-title text-center mb-4">Log in to Music</h3>
@@ -113,7 +46,6 @@
                         {{ form.submit(class='btn btn-primary btn-block') }}
                     </div>
                 </form>
-                <!-- Register Link -->
                 <div class="text-center mt-3">
                     <a href="{{ url_for('auth.register') }}" class="btn btn-link">Do not have an account? Register</a>
                 </div>
@@ -121,5 +53,4 @@
         </div>
     </div>
 
-    <!-- JavaScript Dependencies -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min
