--- a/app/views/templates/register.html
+++ b/app/views/templates/register.html
@@ -5,92 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Register - Your Music App</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-
-    <style>
-        /* Include the same CSS styles as in login.html */
-        body, html {
-            height: 100%;
-            margin: 0;
-        }
-        .login {
-            background:  #0a0a0a;
-            -webkit-background-size: cover;
-            -moz-background-size: cover;
-            -o-background-size: cover;
-            background-size: cover;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            position: relative; 
-        }
-        .background-logo {
-            position: absolute; /* Absolute position */
-            top: 50%; /* Center vertically */
-            left: 80%; /* Center horizontally */
-            transform: translate(-50%, -50%); /* Align center */
-            opacity: 0.2; /* Adjust the visibility */
-            z-index: -1; /* Place it behind the form */
-        }
-        
-        .card {
-            box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-            transition: 0.3s;
-            background-color: #222;
-            color: #fff;
-            position: relative; /* Make sure card is above the background logo */
-            z-index: 1; /* Higher z-index than background-logo */
-        }
-        .card:hover {
-            box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
-        }
-        .logo-container {
-            text-align: center;
-            margin-bottom: 20px;
-        }
-        .logo {
-            width: 150px;
-            height: auto;
-        }
-        .form-container {
-            padding: 2rem;
-        }
-        .btn-primary {
-            background-color: #4CAF50;
-            border: none;
-            padding: 10px 20px;
-        }
-        .btn-link {
-            color: #4CAF50;
-        }
-        .flashes {
-            list-style-type: none;
-            padding: 0;
-        }
-        .flashes li {
-            margin-bottom: 10px;
-        }
-
-        /* Styles for flash messages */
-        .flash-messages-container {
-            position: fixed; /* Fixed position */
-            top: 40%; /* Adjust as per your preference */
-            left: 30%; /* Center horizontally */
-            transform: translateX(-50%); /* Centering adjustment */
-            z-index: 1000; /* High z-index to float above other elements */
-            width: 100%; /* Full width */
-            text-align: center; /* Center the text */
-            pointer-events: none; /* Allows clicks to pass through */
-        }
-
-        .flashes .alert {
-            display: inline-block; /* Display alerts inline */
-            pointer-events: auto; /* Enable interactions with the alert */
-        }
-    </style>
+    <link rel="stylesheet" href="{{ url_for('static', filename='registerStyles.css') }}">
 </head>
 <body class="login">
-    <!-- Flash messages container -->
     <div class="flash-messages-container">
         {% with messages = get_flashed_messages(with_categories=true) %}
             {% if messages %}
@@ -109,7 +26,6 @@
     <div class="form-container">
         <div class="card">
             <div class="card-body">
-                <!-- Registration Form -->
                 <form method="post">
                     {{ form.hidden_tag() }}
                     <h3 class="card-title text-center mb-4">Register for Music</h3>
@@ -133,7 +49,6 @@
                         {{ form.submit(class='btn btn-primary btn-block') }}
                     </div>
                 </form>
-                <!-- Login Link -->
                 <div class="text-center mt-3">
                     <a href="{{ url_for('auth.login') }}" class="btn btn-link">Already have an account? Login</a>
                 </div>
@@ -141,7 +56,6 @@
         </div>
     </div>
 
-    <!-- JavaScript Dependencies -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
