--- a/app/views/templates/settings.html
+++ b/app/views/templates/settings.html
@@ -4,81 +4,9 @@
     <meta charset="UTF-8">
     <title>User Settings</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-
-    <style>
-        /* Copy CSS from register.html here */
-        body, html {
-            height: 100%;
-            margin: 0;
-        }
-        .login {
-            background:  #0a0a0a;
-            -webkit-background-size: cover;
-            -moz-background-size: cover;
-            -o-background-size: cover;
-            background-size: cover;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            position: relative; 
-        }
-        .background-logo {
-            position: absolute;
-            top: 50%;
-            left: 80%;
-            transform: translate(-50%, -50%);
-            opacity: 0.2;
-            z-index: -1;
-        }
-        
-        .card {
-            box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-            transition: 0.3s;
-            background-color: #222;
-            color: #fff;
-            position: relative;
-            z-index: 1;
-        }
-        .card:hover {
-            box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
-        }
-        .form-container {
-            padding: 2rem;
-        }
-        .btn-primary {
-            background-color: #4CAF50;
-            border: none;
-            padding: 10px 20px;
-        }
-        .flashes {
-            list-style-type: none;
-            padding: 0;
-        }
-        .flashes li {
-            margin-bottom: 10px;
-        }
-
-        /* Styles for flash messages */
-        .flash-messages-container {
-            position: fixed; /* Fixed position */
-            top: 80%; /* Adjust as per your preference */
-            left: 25%; /* Center horizontally */
-            transform: translateX(-50%); /* Centering adjustment */
-            z-index: 1000; /* High z-index to float above other elements */
-            width: 100%; /* Full width */
-            text-align: center; /* Center the text */
-            pointer-events: none; /* Allows clicks to pass through */
-        }
-
-        .flashes .alert {
-            display: inline-block; /* Display alerts inline */
-            pointer-events: auto; /* Enable interactions with the alert */
-        }
-    </style>
+    <link rel="stylesheet" href="{{ url_for('static', filename='settingsStyles.css') }}">
 </head>
 <body class="login">
-    <!-- Flash messages container -->
     <div class="flash-messages-container">
         {% with messages = get_flashed_messages(with_categories=true) %}
             {% if messages %}
@@ -92,15 +20,13 @@
     </div>
 
     <div class="background-logo">
-        <!-- Adjust the image source as needed -->
-        <img src="{{ url_for('static', filename='img/settings_logo.jpg') }}" alt="Your Music App Logo" style="width: 300px; height: auto;">
+        <img src="{{ url_for('static', filename='img/register_logo.jpg') }}" alt="Your Music App Logo" style="width: 300px; height: auto;">
     </div>
 
     <div class="form-container">
         <div class="card">
             <div class="card-body">
                 <h3 class="card-title text-center mb-4">User Settings</h3>
-                <!-- Display user email and registration time -->
                 <p>Email: {{ user.get_email() }}</p>
                 <p>You have been a user for {{ (datetime.utcnow() - user.get_registered_date_time()).days + 1}} days.</p>
 
