Refactor layout such as CSS code

--- a/app/views/static/loginStyles.css
+++ b/app/views/static/loginStyles.css
@@ -47,14 +47,9 @@ body {
 }
 
 .flash-messages-container {
-    position: fixed; 
-    top: 70%; 
-    left: 30%; 
-    transform: translateX(-50%); 
-    z-index: 1000; 
     width: 100%; 
     text-align: center; 
-    pointer-events: none; 
+    margin-top: 20px;
 }
 
 .flashes .alert {
