--- a/app/views/templates/home.html
+++ b/app/views/templates/home.html
@@ -4,31 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home Page</title>
-    <!-- Add jQuery for AJAX functionality -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <!-- Custom Styles -->
     <link rel="stylesheet" href="{{ url_for('static', filename='customStyles.css') }}">
-    <!-- Make sure to include the home styles as well -->
     <link rel="stylesheet" href="{{ url_for('static', filename='homeStyles.css') }}">
 
     <style>
-        /* Additional style for table headers */
         #search-results th {
-            padding-left: 80px; /* Increase left padding */
-            padding-right: 80px; /* Increase right padding */
-            text-align: left; /* Optional: align text to the left */
+            padding-left: 80px;
+            padding-right: 80px;
+            text-align: left;
         }
     </style>
 </head>
 <body>
 
-    <!-- Sidebar -->
     <div id="sidebar" class="nav">
-        <!-- Logo -->
         <a href="#home" class="logo">
             <img src="{{ url_for('static', filename='img/logo.png') }}" alt="Your Logo">
         </a>
-        <!-- Navigation Links -->
         <ul>
             <li><a href="{{ url_for('main.home') }}">Home</a></li>
             <li><a href="{{ url_for('main.explore') }}" class="btn btn-primary">Explore</a></li>
@@ -44,7 +37,6 @@
         <img src="{{ url_for('static', filename='img/register_logo.jpg') }}" alt="Your Music App Logo" style="width: 300px; height: auto;">
     </div>
     
-    <!-- Main Content Area -->
     <div class="main-content">
       {% with messages = get_flashed_messages(with_categories=true) %}
         {% if messages %}
@@ -56,11 +48,9 @@
         {% endif %}
       {% endwith %}
 
-      <!-- Search Bar -->
       <div class="search-container">
           <input type="text" id="song-search" placeholder="Search...">
       </div>
-      <!-- Table for Content -->
       <table id="search-results">
         <thead>
             <tr>
@@ -72,18 +62,11 @@
             </tr>
         </thead>
         <tbody>
-            <!-- Rows will be populated here by the JavaScript -->
+
         </tbody>
       </table>
     </div>
 
-    <!-- Audio Player -->
-    <!-- <div class="fixed-bottom bg-dark">
-        <audio controls class="w-100">
-        </audio>
-    </div> -->
-
-    <!-- Scripts -->
     <script src="{{ url_for('static', filename='search.js') }}"></script>
 </body>
 </html>
