--- a/app/views/templates/settings.html
+++ b/app/views/templates/settings.html
@@ -32,25 +32,31 @@
 
                 <form method="post" action="{{ url_for('settings.user_settings') }}">
                     {{ form.hidden_tag() }}
-                    <div class="form-group">
-                        {{ form.username.label(class='form-label') }}
-                        {{ form.username(class='form-control') }}
-                    </div>
-                    <div class="form-group">
-                        {{ form.gender.label(class='form-label') }}
-                        {{ form.gender(class='form-control') }}
-                    </div>
-                    <div class="form-group">
-                        {{ form.birthday.label(class='form-label') }}
-                        {{ form.birthday(class='form-control') }}
-                    </div>
-                    <div class="form-group">
-                        {{ form.new_password.label(class='form-label') }}
-                        {{ form.new_password(class='form-control') }}
-                    </div>
-                    <div class="form-group">
-                        {{ form.confirm_new_password.label(class='form-label') }}
-                        {{ form.confirm_new_password(class='form-control') }}
+                    <div class="row">
+                        <div class="col-md-6">
+                            <div class="form-group">
+                                {{ form.username.label(class='form-label') }}
+                                {{ form.username(class='form-control') }}
+                            </div>
+                            <div class="form-group">
+                                {{ form.gender.label(class='form-label') }}
+                                {{ form.gender(class='form-control') }}
+                            </div>
+                            <div class="form-group">
+                                {{ form.birthday.label(class='form-label') }}
+                                {{ form.birthday(class='form-control') }}
+                            </div>
+                        </div>
+                        <div class="col-md-6">
+                            <div class="form-group">
+                                {{ form.new_password.label(class='form-label') }}
+                                {{ form.new_password(class='form-control') }}
+                            </div>
+                            <div class="form-group">
+                                {{ form.confirm_new_password.label(class='form-label') }}
+                                {{ form.confirm_new_password(class='form-control') }}
+                            </div>
+                        </div>
                     </div>
                     <div class="text-center">
                         {{ form.submit(class='btn btn-primary btn-block') }}
