--- a/app/views/templates/home.html
+++ b/app/views/templates/home.html
@@ -32,8 +32,8 @@
 
         <!-- Bottom links -->
         <ul class="bottom-links"> <!-- Added class -->
-            <li><a href="{{ url_for('settings.user_settings') }}" class="btn btn-primary btn-settings">Settings</a></li>
-            <li><a href="{{ url_for('auth.logout') }}" class="btn btn-primary btn-logout">Logout</a></li>
+            <li><a href="{{ url_for('settings.user_settings') }}" class="btn btn-primary" id="btn-settings">Settings</a></li>
+            <li><a href="{{ url_for('auth.logout') }}" class="btn btn-primary" id="btn-logout">Logout</a></li>
         </ul>
     </div>
 
