--- a/app/views/templates/register.html
+++ b/app/views/templates/register.html
@@ -51,7 +51,9 @@
                 {% if messages %}
                     <div class="flashes">
                         {% for category, message in messages %}
-                            <div class="alert alert-{{ category }}">{{ message }}</div>
+                            {% if loop.index == 1 %}
+                                <div class="alert alert-{{ category }}">{{ message }}</div>
+                            {% endif %}
                         {% endfor %}
                     </div>
                 {% endif %}
