--- a/app/views/static/exploreStyles.css
+++ b/app/views/static/exploreStyles.css
@@ -1,9 +1,21 @@
+body, h1, h2, h3, ul, li {
+    margin: 0;
+    padding: 0;
+    color: #ffffff; /* Matching text color from homeStyles.css */
+}
+
+body {
+    background-color: #121212; /* Matching background color from homeStyles.css */
+}
+
+/* Maintaining original styles for the top-songs-title */
 .top-songs-title {
     text-align: center;
-    color: #333;
+    color: #ffffff; /* Updated color to match homeStyles.css */
     margin: 20px 0;
 }
 
+/* Maintaining original styles for the top-songs-container */
 .top-songs-container {
     max-height: 40vh;
     overflow-y: auto;
@@ -11,46 +23,56 @@
     width: 80%;
 }
 
-#top-songs {
+/* Updating table styles to match homeStyles.css theme */
+#top-songs, #top-songs-by-genre {
     width: 100%;
     border-collapse: collapse;
     text-align: center;
 }
 
-#top-songs th, #top-songs td {
+#top-songs th, #top-songs td, #top-songs-by-genre th, #top-songs-by-genre td {
     border: 1px solid #ddd;
     padding: 8px;
+    background-color: #333333; /* Dark background for table cells */
+    color: #ffffff; /* White text color for table cells */
 }
 
+/* Maintaining original styles for the genre search container */
 .genre-search-container {
     text-align: center;
 }
 
+/* Updating styles for genre search input to match homeStyles.css theme */
 #genre-search {
     width: 80%;
     padding: 10px;
     margin-bottom: 20px;
+    background-color: #333333; /* Dark background for search input */
+    color: #ffffff; /* White text color for search input */
+    border: 2px solid #ccc; /* Border color (adjust as needed) */
+    border-radius: 4px;
 }
 
 #genre-search-results p {
     cursor: pointer;
-    color: #007bff; /* Adjust the color as needed */
+    color: #a8d1fb; /* Blue color for search results text */
 }
 
 #genre-search-results p:hover {
     text-decoration: underline;
 }
 
-#top-songs-by-genre {
-    width: 100%;
-    border-collapse: collapse;
-    text-align: center;
+/* Styling for zebra striping in tables */
+#top-songs tr:nth-child(even), #top-songs-by-genre tr:nth-child(even) {
+    background-color: #454545; /* Darker background for even rows */
 }
 
-#top-songs-by-genre th, #top-songs-by-genre td {
-    border: 1px solid #ddd;
-    padding: 8px;
+.btn-secondary.btn-block {
+    left: 0; /* Align to the left */
+    bottom: 0; /* Align to the bottom */
+    color: #c0c3d4; /* White text for readability */
+    padding: 10px 15px;
+    border-radius: 5px;
+    font-size: 18px; /* Adjust font size as needed */
 }
 
-#top-songs tr:nth-child(even) {background-color: #f2f2f2;}
-#top-songs-by-genre tr:nth-child(even) {background-color: #f2f2f2;}
