mySongs UI added

--- a/app/views/templates/my_songs.html
+++ b/app/views/templates/my_songs.html
@@ -3,14 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>My Songs</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='homeStyles.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='mySongsStyles.css') }}">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <style>
-        body {
-            background-color: #ffffff; 
-            color: #121212;
-        }
-    </style>
+    
 </head>
 <body>
     <h1>My Songs</h1>
