logo added-mysong

--- a/app/views/templates/my_songs.html
+++ b/app/views/templates/my_songs.html
@@ -5,39 +5,45 @@
     <title>My Songs</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='mySongsStyles.css') }}">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    
 </head>
 <body>
-    <h1>My Songs</h1>
-    <table id="search-results">
-        <thead>
-            <tr>
-                <th>Name</th>
-                <th>Upload Date</th>
-                <th>Popularity</th>
-                <th>Filepath</th>
-                <th>Actions</th>
-            </tr>
-        </thead>
-        <tbody>
-            {% for song in songs %}
-            <tr>
-                <td>{{ song.get_name() }}</td>
-                <td>{{ song.get_upload_date().strftime('%Y-%m-%d') }}</td>
-                <td>{{ song.get_popularity() }}</td>
-                <td>{{ song.get_file_path() }}</td>
-                <td>
-                    <button class="btn-rename" onclick="showRenameField(this)">Rename</button>
-                    <form method="post" action="{{ url_for('music.rename_song', song_id=song.SongId) }}" class="rename-form">
-                        <input type="text" name="new_name" class="rename-input" value="{{ song.name }}" required>
-                        <input type="submit" value="Save" class="btn-save">
-                        <button type="button" class="btn-cancel" onclick="cancelRename(this)">Cancel</button>
-                    </form>
-                </td>
-            </tr>
-            {% endfor %}
-        </tbody>
-    </table>
+
+    <div class="background-logo">
+        <img src="{{ url_for('static', filename='img/register_logo.jpg') }}" alt="Your Music App Logo" style="width: 300px; height: auto;">
+    </div>
+
+    <div class="main-content">
+        <h1>My Songs</h1>
+        <table id="search-results">
+            <thead>
+                <tr>
+                    <th>Name</th>
+                    <th>Upload Date</th>
+                    <th>Popularity</th>
+                    <th>Filepath</th>
+                    <th>Actions</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for song in songs %}
+                <tr>
+                    <td>{{ song.get_name() }}</td>
+                    <td>{{ song.get_upload_date().strftime('%Y-%m-%d') }}</td>
+                    <td>{{ song.get_popularity() }}</td>
+                    <td>{{ song.get_file_path() }}</td>
+                    <td>
+                        <button class="btn-rename" onclick="showRenameField(this)">Rename</button>
+                        <form method="post" action="{{ url_for('music.rename_song', song_id=song.SongId) }}" class="rename-form">
+                            <input type="text" name="new_name" class="rename-input" value="{{ song.name }}" required>
+                            <input type="submit" value="Save" class="btn-save">
+                            <button type="button" class="btn-cancel" onclick="cancelRename(this)">Cancel</button>
+                        </form>
+                    </td>
+                </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+    </div>
 
     <a href="{{ url_for('main.home') }}" class="btn btn-secondary btn-block">Go Back</a>
 
@@ -55,7 +61,7 @@
         }
 
         $(document).ready(function() {
-            $('.rename-input, .btn-save, .btn-cancel').hide()
+            $('.rename-input, .btn-save, .btn-cancel').hide();
         });
     </script>
 </body>
