--- a/app/views/static/mySongsStyles.css
+++ b/app/views/static/mySongsStyles.css
@@ -14,6 +14,7 @@ h1 {
     margin: 20px 0;
 }
 
+
 #search-results {
     width: 80%;
     margin: 20px auto;
@@ -85,3 +86,12 @@ h1 {
 .btn-secondary.btn-block:hover {
     background-color: #505051;
 }
+.background-logo {
+    position: absolute;
+    top: 60%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    opacity: 0.2;
+    z-index: -1;
+}
+
