changed button color to baby blue

--- a/app/views/static/loginStyles.css
+++ b/app/views/static/loginStyles.css
@@ -31,12 +31,12 @@ body {
     padding: 2rem;
 }
 .btn-primary {
-    background-color: #4CAF50; 
+    background-color: #6fb2d8; 
     border: none;
     padding: 10px 20px;
 }
 .btn-link {
-    color: #4CAF50; 
+    color: #6fb2d8; 
 }
 .flashes {
     list-style-type: none;
