--- a/app/views/static/settingsStyles.css
+++ b/app/views/static/settingsStyles.css
@@ -36,7 +36,7 @@ body {
     padding: 2rem;
 }
 .btn-primary {
-    background-color: #4CAF50;
+    background-color: #6fb2d8;
     border: none;
     padding: 10px 20px;
 }
