--- a/app/views/templates/upload.html
+++ b/app/views/templates/upload.html
@@ -31,7 +31,7 @@
             padding: 2rem;
         }
         .btn-primary {
-            background-color: #4CAF50;
+            background-color: #6fb2d8;
             border: none;
             padding: 10px 20px;
         }
