--- a/app/views/templates/explore.html
+++ b/app/views/templates/explore.html
@@ -9,6 +9,33 @@
 </head>
 <body>
     <div class="main-content">
+        <h2 class="recommendations-title">Recommended for You</h2>
+        <div class="top-songs-container">
+            <table id="recommended-songs">
+                <thead>
+                    <tr>
+                        <th>Name</th>
+                        <th>Artist</th>
+                        <th>Popularity</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for song in recommended_songs %}
+                    <tr>
+                        <td>{{ song.get_name() }}</td>
+                        <td>
+                            {% for creator in song.get_creators() %}
+                                {{ creator.get_username() }}
+                                {% if not loop.last %}, {% endif %}
+                            {% endfor %}
+                        </td>
+                        <td>{{ song.get_popularity() }}</td>
+                    </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
+        </div>
+
         <h2 class="top-songs-title">Top 20 Popular Songs</h2>
         <div class="top-songs-container">
             <table id="top-songs">
@@ -23,7 +50,12 @@
                     {% for song in top_songs %}
                     <tr>
                         <td>{{ song.get_name() }}</td>
-                        <td>{{ song.get_creators()[0].get_username() }}</td>
+                        <td>
+                            {% for creator in song.get_creators() %}
+                                {{creator.get_username()}}
+                                {% if not loop.last %}, {% endif %}
+                            {% endfor %}
+                        </td>
                         <td>{{ song.get_popularity() }}</td>
                     </tr>
                     {% endfor %}
